Modify some features and tools

--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>curd</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Cairo:wght@200;300;400;500;600;700;800;900;1000&family=Montserrat:ital,wght@0,300;0,400;0,800;1,800&family=Rubik+Doodle+Shadow&family=Rubik+Lines&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Cairo:wght@200;300;400;500;600;700;800;900;1000&family=Montserrat:ital,wght@0,300;0,400;0,800;1,800&family=Rubik+Doodle+Shadow&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/bootstrap.min.css">
     <link rel="stylesheet" href="CSS/all.min.css">
     <link rel="stylesheet" href="CSS/styal.css">
@@ -14,7 +20,7 @@
  
     <div class="back-ground">
         <div class="title text-center">
-            <p  class="fs-2 text-light">Stor</p>
+            <p  class="fs-1 text-li">CruD System </p>
         </div>
         <div class="container py-5">
             <label for="ProductName" class="fs-4 ft-color">ProductName:</label>
@@ -32,6 +38,28 @@
 
             
         </div>
+<div class="input-search py-3 ">
+    <input type="search" placeholder="Search..." class="w-75 form-control mx-auto">
+</div>
+<div class="container  w-100 bg-light mt-4 rounded-3 ">
+       <table class="table text-center ">
+        <thead>
+            <th>Name</th>
+            <th>praice</th>
+            <th>catogry</th>
+            <th>Desc</th>
+            <th>Update</th>
+            <th>Delete</th>
+        </thead>
+        <tbody id="tabolBody">
+       
+            <!-- <td><button class="btn btn-outline-warning">Update</button></td>
+            <td><button class="btn btn-outline-danger">Delete</button></td> -->
+        </tbody>
+    </table>
+
+</div>
+ 
 
     </div>
 
