Modify some features and tools

--- a/index.htm
+++ b/index.htm
@@ -53,8 +53,8 @@
         </thead>
         <tbody id="tabolBody">
        
-            <!-- <td><button class="btn btn-outline-warning">Update</button></td>
-            <td><button class="btn btn-outline-danger">Delete</button></td> -->
+            <td><button class="btn btn-outline-warning">Update</button></td>
+            <td><button class="btn btn-outline-danger">Delete</button></td>
         </tbody>
     </table>
 
